# RadOptima-AI

./: .gitignore  CMakeLists.txt  README.md  glad.c  imgui.ini  radoptima_core.pyd  test_engine.py  test_render.py  verify_data.py
Libraries/include/glad/: glad.h
Libraries/lib/: glfw3.lib
cpp_core/: CMakeLists.txt  main.cu
data/: dicom_loader.py
shaders/: raymarch.frag  raymarch.vert
